# 2paths

./: .gitignore  README.md  download_include.sh
exps/: README.md  Snakefile  merge_tsv.py  table-comparison.smk
exps/envs/: bcftools.yaml  bwa.yaml  insilicoseq.yaml  kmc.yaml
exps/scripts/: build_efficiency_table.py  change_header.py  get_stats.py
src/: CMakeLists.txt  gfa_scorer.cpp  paths_finder.cpp  table_producer.cpp
src/cpp-lib/: GfaUtils.cpp  GfaUtils.h  Graph.cpp  Graph.h  GraphScorer.cpp  GraphScorer.h  Greedy.cpp  Greedy.h  MinCostFlow.cpp  MinCostFlow.h  Solver.cpp  Solver.h  Suurballe.cpp  Suurballe.h  Types.h
